--- a/templates/about.html
+++ b/templates/about.html
@@ -47,7 +47,7 @@
         <div class="mx-auto flex h-[80px] max-w-[1200px] items-center justify-center md:justify-between px-5">
 
             <a href="/" class="hidden md:flex items-center transition-opacity hover:opacity-80">
-                <img src="/static/images/logo.svg"
+                <img src="/static/images/team_logo.webp"
                     onerror="this.src='https://placehold.co/100x40/transparent/333?text=LOGO'" alt="Logo"
                     class="h-10 w-auto">
             </a>
